[package]
name = "planters-rdconf-hackathon-project"
version = "0.0.1"
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
seed_hooks = {git = "https://github.com/rebo/seed_hooks"}
seed_style = { package = "seed_style_preview", git="https://github.com/rebo/seed_style_preview" }

# Un comment if we want to use serde/wasmbindgen/futures directily - perhaps for fetch
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# wasm-bindgen-futures = "0.4.13"
# wasm-bindgen = "^0.2.62"
# futures = "0.3.5"


[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'

# Un comment if we want to use web-sys directly
# [dependencies.web-sys]
# version = "0.3.40"
# features = [
#     "DomTokenList",
#     "AbortController",
#     "AbortSignal",
#     "BeforeUnloadEvent",
#     "Blob",
#     "BinaryType",
#     "CanvasRenderingContext2d",
#     "CloseEvent",
#     "console",
#     "CustomEvent",
#     "CustomEventInit",
#     "DataTransfer",
#     "Document",
#     "DomException",
#     "DragEvent",
#     "Element",
#     "Event",
#     "EventTarget",
#     "File",
#     "FormData",
#     "HashChangeEvent",
#     "Headers",
#     "History",
#     "HtmlElement",
#     "HtmlCanvasElement",
#     "HtmlCollection",
#     "HtmlDocument",
#     "HtmlInputElement",
#     "HtmlMenuItemElement",
#     "HtmlProgressElement",
#     "HtmlOptionElement",
#     "HtmlDataElement",
#     "HtmlMeterElement",
#     "HtmlLiElement",
#     "HtmlOutputElement",
#     "HtmlParamElement",
#     "HtmlTextAreaElement",
#     "HtmlSelectElement",
#     "HtmlButtonElement",
#     "Location",
#     "MessageEvent",
#     "MouseEvent",
#     "Navigator",
#     "Node",
#     "NodeList",
#     "Performance",
#     "PointerEvent",
#     "PopStateEvent",
#     "ReferrerPolicy",
#     "Request",
#     "RequestCache",
#     "RequestCredentials",
#     "RequestInit",
#     "RequestMode",
#     "RequestRedirect",
#     "Response",
#     "Selection",
#     "Storage",
#     "TcpReadyState",
#     "Text",
#     "Touch",
#     "TouchEvent",
#     "TouchList",
#     "console",
#     "WebSocket",
#     "Window",
#     "KeyboardEvent",
#     "InputEvent",
#     "Url",
#     "UrlSearchParams",
# ]

